add botones cta secundarios

--- a/index.html
+++ b/index.html
@@ -157,6 +157,18 @@
                 </div>
             </div>
 
+            <section class="py-12 text-center">
+                <a href="https://app.automarketpro.com.ar/solicitud/0"
+                class="btn-secondary inline-flex items-center justify-center gap-2 px-8 py-4 text-lg font-semibold rounded-xl
+                        hover:bg-blue-700 transition-all shadow-lg">
+                    Agendar inspección ahora
+                </a>
+                <p class="text-gray-300 text-xs mt-3 font-medium flex items-center justify-center gap-2">
+                    <i class="fas fa-check-circle"></i>
+                    Tenemos disponibilidad inmediata en CABA y GBA
+                </p>
+            </section>
+
             <a href="https://app.automarketpro.com.ar/solicitud/0" style="text-decoration: none; color: inherit; display: block;">
                 <div id="inspeccion-detalle" class="pt-10 border-t border-white/10">
                     <h3 class="text-3xl md:text-4xl font-bold text-center mb-4">
@@ -261,6 +273,17 @@
     </div>
 
     <section id="benefits" class="fade-in py-16 bg-primary">
+        <div class="py-12 text-center">
+                <a href="https://app.automarketpro.com.ar/solicitud/0"
+                class="btn-secondary inline-flex items-center justify-center gap-2 px-8 py-4 text-lg font-semibold rounded-xl
+                        hover:bg-blue-700 transition-all shadow-lg">
+                    Verificar este auto
+                </a>
+                <p class="text-gray-300 text-xs mt-3 font-medium flex items-center justify-center gap-2">
+                    <i class="fas fa-check-circle"></i>
+                    Hacés la solicitud y nos ocupamos del resto.
+                </p>
+        </div>
         <div class="max-w-6xl mx-auto px-6 text-center">
             <h3 class="text-3xl font-bold mb-12">¿Por qué elegir Automarketpro?</h3>
             <div class="grid grid-cols-1 md:grid-cols-3 gap-8">
@@ -375,12 +398,12 @@
     <!-- CTA -->
     <section id="cta" class="fade-in py-20 text-center">
         <div class="max-w-4xl mx-auto px-6">
-        <h3 class="text-3xl md:text-4xl font-extrabold  mb-4">
+            <h3 class="text-3xl md:text-4xl font-extrabold  mb-4">
                 Cada auto tiene su historia. <br> Conocela antes de comprar.
             </h3>
 
             <p class="text-lg  mb-6">
-                Contratá la inspección, elegí día y horario y recibí tu informe técnico.
+                Contratá la inspección, elegí día y horario y recibí tu informe.
             </p>
 
             <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Solicitar verificación</a>
