--- a/index.html
+++ b/index.html
@@ -165,7 +165,7 @@
                 </a>
                 <p class="text-gray-300 text-xs mt-3 font-medium flex items-center justify-center gap-2">
                     <i class="fas fa-check-circle"></i>
-                    Tenemos disponibilidad inmediata en CABA y GBA
+                    Disponibilidad inmediata en CABA y GBA
                 </p>
             </section>
 
