--- a/index.html
+++ b/index.html
@@ -152,7 +152,7 @@
                         Rápido
                     </h4>
                     <p>
-                        Informe completo en 24hs.
+                        Recibis informe completo en 24hs.
                     </p>
                 </div>
             </div>
