mejoras en txt paso a paso y ultimo cta

--- a/index.html
+++ b/index.html
@@ -342,7 +342,7 @@
                                 <span class="text-blue-600 font-bold text-lg">01.</span>
                                 <h4 class="text-2xl font-bold mb-4">Completas el formulario de solicitud</h4>
                                 <p class="text-gray-600 text-lg leading-relaxed">
-                                    Nos mandas los datos del auto a verificar y el lugar donde se encuentra. Es rápido y sencillo.
+                                    Nos envias los datos del auto a verificar y el lugar donde se encuentra. Es rápido y sencillo.
                                 </p>
                             </div>
                         </div>
@@ -357,7 +357,8 @@
                                 <span class="text-blue-600 font-bold text-lg">02.</span>
                                 <h4 class="text-2xl font-bold mb-4">Pagás la inspección y agendamos</h4>
                                 <p class="text-gray-600 text-lg leading-relaxed">
-                                    Una vez recibido el pago, coordinamos día y horario para realizar la inspección del vehículo en el lugar acordado.
+                                    Una vez recibido el pago, coordinamos día y horario para inspeccionar el vehículo en el lugar acordado.
+                                    Podés estar presente junto al verificador.
                                 </p>
                             </div>
                         </div>
@@ -404,15 +405,21 @@
     <!-- CTA -->
     <section id="cta" class="py-20 text-center">
         <div class="max-w-4xl mx-auto px-6">
-            <h3 class="text-3xl md:text-4xl font-extrabold  mb-4">
+            <h3 class="text-xl md:text-4xl font-extrabold  mb-4">
                 Cada auto tiene su historia. <br> Conocela antes de comprar.
             </h3>
 
-            <p class="text-lg  mb-6">
-                Contratá la inspección, elegí día y horario y recibí tu informe.
+            <p class="text-md mb-6">
+                Contratá la inspección, elegí día y horario y recibí tu informe. 
             </p>
 
             <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Solicitar verificación</a>
+        
+            <p class="text-xs mt-10 font-medium gap-2 max-w-sm mx-auto">
+                <span> Podés estar presente y ver el auto con nosotros
+                      <i class="fas fa-check-double mt-0.5 text-green-600"></i>
+                </span>
+            </p>
         </div>
     </section>
 
