--- a/index.html
+++ b/index.html
@@ -293,51 +293,70 @@
                     </div>
                 </div>
             </a>
-
-                <div class="grid grid-cols-1 md:grid-cols-2 lg:grid-cols-2 gap-8">
-
-                    <div class="fade-in card-anim glass-card reveal p-6">
-                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3">
+            <div class="grid grid-cols-1 md:grid-cols-2 gap-6">
+                
+                <details class="group fade-in card-anim glass-card reveal p-0 overflow-hidden border border-white/10 rounded-xl transition-all duration-300">
+                    <summary class="flex items-center justify-between p-6 cursor-pointer list-none">
+                        <h4 class="text-xl font-semibold flex items-center gap-3">
                             <i class="fas fa-microchip text-blue-500"></i>
                             Escaneo Completo
                         </h4>
-                        <p class="text-gray-300 text-sm">
-                            Realizamos un escaneo electrónico detectando fallas ocultas y analizando el historial profundo del vehículo.
-                        </p>
+                        <span class="transition group-open:rotate-180 text-blue-500">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                    </summary>
+                    <div class="px-6 pb-6 text-gray-300 text-sm animate-slide-down">
+                        Realizamos un escaneo electrónico detectando fallas ocultas y analizando el historial profundo del vehículo.
                     </div>
+                </details>
 
-                    <div class="fade-in card-anim glass-card reveal p-6 text-blue-100">
-                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3 text-white">
+                <details class="group fade-in card-anim glass-card reveal p-0 overflow-hidden border border-white/10 rounded-xl transition-all duration-300">
+                    <summary class="flex items-center justify-between p-6 cursor-pointer list-none">
+                        <h4 class="text-xl font-semibold flex items-center gap-3">
                             <i class="fas fa-magnifying-glass text-blue-500"></i>
-                            Revisión mecánica y estructural
+                            Revisión mecánica
                         </h4>
-                        <p class="text-gray-300 text-sm">
-                            Inspección técnica del motor, fugas e integridad del <strong>chasis y carrocería</strong>.
-                        </p>
+                        <span class="transition group-open:rotate-180 text-blue-500">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                    </summary>
+                    <div class="px-6 pb-6 text-gray-300 text-sm animate-slide-down">
+                        Inspección técnica del motor, fugas e integridad del <strong>chasis y carrocería</strong>.
                     </div>
+                </details>
 
-                    <div class="fade-in card-anim glass-card reveal p-6">
-                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3">
+                <details class="group fade-in card-anim glass-card reveal p-0 overflow-hidden border border-white/10 rounded-xl transition-all duration-300">
+                    <summary class="flex items-center justify-between p-6 cursor-pointer list-none">
+                        <h4 class="text-xl font-semibold flex items-center gap-3">
                             <i class="fas fa-exclamation-triangle text-blue-500"></i>
                             Alertas Tempranas
                         </h4>
-                        <p class="text-gray-300 text-sm">
-                            Te informamos sobre posibles reparaciones próximas o cambios de piezas necesarios.
-                        </p>
+                        <span class="transition group-open:rotate-180 text-blue-500">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                    </summary>
+                    <div class="px-6 pb-6 text-gray-300 text-sm animate-slide-down">
+                        Te informamos sobre posibles reparaciones próximas o cambios de piezas necesarios.
                     </div>
+                </details>
 
-                    <div class="fade-in card-anim glass-card reveal p-6">
-                        <h4 class="text-xl font-semibold mb-3 flex items-center gap-3 text-white">
+                <details class="group fade-in card-anim glass-card reveal p-0 overflow-hidden border border-white/10 rounded-xl transition-all duration-300">
+                    <summary class="flex items-center justify-between p-6 cursor-pointer list-none">
+                        <h4 class="text-xl font-semibold flex items-center gap-3">
                             <i class="fas fa-file-invoice text-blue-500"></i>
                             Informe Legal
                         </h4>
-                        <p class="text-gray-300 text-sm">
-                            Detallamos la situación de multas y patentes para una transferencia segura.
-                        </p>
+                        <span class="transition group-open:rotate-180 text-blue-500">
+                            <i class="fas fa-chevron-down"></i>
+                        </span>
+                    </summary>
+                    <div class="px-6 pb-6 text-gray-300 text-sm animate-slide-down">
+                        Detallamos la situación de multas y patentes para una transferencia segura.
                     </div>
+                </details>
 
-                </div>
             </div>
+
         </div>
     </section>
 
