cambio textos por reserva del 10%

--- a/index.html
+++ b/index.html
@@ -110,7 +110,7 @@
                     <div class="flex flex-col md:flex-row items-center gap-6">
                         <a class="btn-primary w-full md:w-auto text-center text-lg px-10 py-5 rounded-full shadow-2xl shadow-blue-200 hover:transform hover:-translate-y-1 transition-all font-bold" 
                         href="https://app.automarketpro.com.ar/solicitud/0">
-                            Solicitar verificación
+                            Reservar inspección
                         </a>
                         
                         <a href="https://app.automarketpro.com.ar/solicitud/0" style="text-decoration: none; color: inherit; display: block;">
@@ -150,7 +150,7 @@
                         Seguro
                     </h4>
                     <p>
-                        Pagás de forma segura y reservás automáticamente.
+                        Pagás reserva con el 10% de forma segura y agendas automáticamente.
                     </p>
                 </div>
 
@@ -345,16 +345,16 @@
                             <div class="absolute -inset-1 bg-gradient-to-r from-blue-900 to-cyan-400 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
                             <div class="relative px-8 py-6 bg-secondary rounded-xl border border-blue-500/30 text-center shadow-2xl">
                                 <span class="absolute -top-3 left-1/2 -translate-x-1/2 bg-blue-600 text-white text-xs font-bold px-3 py-1 rounded-full uppercase tracking-widest shadow-lg">
-                                    Tarifa Promocional
+                                    Reserva ahora
                                 </span>
-                                <p class="text-gray-600 text-sm uppercase tracking-widest mb-1">Servicio de Inspección</p>
+                                <p class="text-gray-600 text-sm uppercase tracking-widest mb-1">Precio Final</p>
                                 <div class="flex items-center justify-center gap-3">
                                     <span class="text-4xl md:text-5xl font-extrabold">
                                         $99.000
                                     </span>
                                 </div>
-                                <p class="text-blue-400 text-sm mt-2 font-medium">
-                                    <i class="fas fa-check-circle mr-1"></i> Precio final con informe incluido
+                                <p class="text-blue-600 text-sm mt-2 font-medium">
+                                      Reservá ahora con solo el 10% <span class="font-bold text-blue-700">$9.900</span> y pagá el resto tras recibir el informe. 
                                 </p>
                             </div>
                         </div>
@@ -398,11 +398,11 @@
         <div class="fade-in py-12 text-center">
                  <a class="btn-primary inline-flex items-center justify-center gap-2 px-8 py-4 text-lg rounded-full shadow-2xl shadow-blue-200 hover:transform hover:-translate-y-1 transition-all font-bold" 
                     href="https://app.automarketpro.com.ar/solicitud/0">
-                        Verificar este auto
+                        Reservar inspección
                 </a>
                 <p class="text-xs mt-3 font-medium flex items-center justify-center gap-2">
                     <i class="fas fa-check-circle text-blue-600"></i>
-                    Hacés la solicitud y nos ocupamos del resto.
+                    Contratas con el 10% y nos ocupamos del resto.
                 </p>
 
                 <!-- <a href="https://app.automarketpro.com.ar/solicitud/0"
@@ -488,7 +488,7 @@
                                 <span class="text-blue-600 font-bold text-lg">02.</span>
                                 <h4 class="text-2xl font-bold mb-4">Pagás la inspección y agendamos</h4>
                                 <p class="text-lg leading-relaxed">
-                                    Una vez recibido el pago, coordinamos día y horario para inspeccionar el vehículo en el lugar acordado.
+                                    Reservas con el 10%, coordinamos día y horario para inspeccionar el vehículo en el lugar acordado.
                                     Podés estar presente junto al verificador.
                                 </p>
                             </div>
@@ -544,7 +544,7 @@
                 Contratá la inspección, elegí día y horario y recibí tu informe. 
             </p>
 
-            <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Solicitar verificación</a>
+            <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Señar verificación</a>
         
             <p class="text-xs mt-10 font-medium gap-2 max-w-sm mx-auto">
                 <span> Podés estar presente y ver el auto con nosotros
