add titulo para reels

--- a/index.html
+++ b/index.html
@@ -365,6 +365,11 @@
         </div>
     </section>
 
+    <div class="text-center mb-5">
+        <span class="text-purple-600 font-semibold uppercase tracking-wide text-sm">Instagram</span>
+        <h2 class="text-3xl font-extrabold mt-2 text-slate-900">Seguinos en redes</h2>
+        <p class="text-gray-500 mt-4">Mira nuestro contenido exclusivo.</p>
+    </div>
     <div class="contenedor-reels-grid">
         <div class="reel-wrapper">
             <blockquote class="instagram-media" data-instgrm-permalink="https://www.instagram.com/reel/DTgem4vDx9W/" data-instgrm-version="14">
