fix txt paso 02

--- a/index.html
+++ b/index.html
@@ -491,7 +491,7 @@
                             </div>
                             <div class="order-1 md:order-2">
                                 <span class="text-blue-600 font-bold text-lg">02.</span>
-                                <h4 class="text-2xl font-bold mb-4">Pagás la inspección y agendamos</h4>
+                                <h4 class="text-2xl font-bold mb-4">Pagás la seña y agendamos</h4>
                                 <p class="text-lg leading-relaxed">
                                     Reservas con el 10%, coordinamos día y horario para inspeccionar el vehículo en el lugar acordado.
                                     Podés estar presente junto al verificador.
