fix txt detalle precio

--- a/index.html
+++ b/index.html
@@ -212,7 +212,7 @@
                                 <div class="w-10 h-10 bg-blue-600 rounded-full flex items-center justify-center text-white font-bold text-sm">MC</div>
                                 <div class="text-left">
                                     <h4 class="font-bold text-sm">Mariano Costa</h4>
-                                    <span class="text-[10px] text-gray-400 font-bold uppercase tracking-wider">Hace 2 días</span>
+                                    <span class="text-[10px] text-gray-400 uppercase tracking-wider">Hace 2 días</span>
                                 </div>
                             </div>
                         </div>
@@ -229,7 +229,7 @@
                                 <img src="https://i.pravatar.cc/150?u=a2" class="w-10 h-10 rounded-full object-cover" alt="">
                                 <div class="text-left">
                                     <h4 class="font-bold text-sm">Luciana R.</h4>
-                                    <span class="text-[10px] text-gray-400 font-bold uppercase tracking-wider">Hace 1 semana</span>
+                                    <span class="text-[10px] text-gray-400 uppercase tracking-wider">Hace 1 semana</span>
                                 </div>
                             </div>
                         </div>
@@ -246,7 +246,7 @@
                                 <div class="w-10 h-10 bg-slate-800 rounded-full flex items-center justify-center text-gray-400 font-bold text-sm">JP</div>
                                 <div class="text-left">
                                     <h4 class="font-bold text-sm">Juan Pablo</h4>
-                                    <span class="text-[10px] text-gray-400 font-bold uppercase tracking-wider">Local Guide</span>
+                                    <span class="text-[10px] text-gray-400 uppercase tracking-wider">Local Guide</span>
                                 </div>
                             </div>
                         </div>
@@ -263,7 +263,7 @@
                                 <img src="https://i.pravatar.cc/150?u=a4" class="w-10 h-10 rounded-full object-cover" alt="">
                                 <div class="text-left">
                                     <h4 class="font-bold text-sm">Ricardo G.</h4>
-                                    <span class="text-[10px] text-gray-400 font-bold uppercase tracking-wider">Hace 1 mes</span>
+                                    <span class="text-[10px] text-gray-400 uppercase tracking-wider">Hace 1 mes</span>
                                 </div>
                             </div>
                         </div>
@@ -345,7 +345,7 @@
                             <div class="absolute -inset-1 bg-gradient-to-r from-blue-900 to-cyan-400 rounded-2xl blur opacity-25 group-hover:opacity-50 transition duration-1000"></div>
                             <div class="relative px-8 py-6 bg-secondary rounded-xl border border-blue-500/30 text-center shadow-2xl">
                                 <span class="absolute -top-3 left-1/2 -translate-x-1/2 bg-blue-600 text-white text-xs font-bold px-3 py-1 rounded-full uppercase tracking-widest shadow-lg">
-                                    Reserva ahora
+                                    Reserva ahora!
                                 </span>
                                 <p class="text-gray-600 text-sm uppercase tracking-widest mb-1">Precio Final</p>
                                 <div class="flex items-center justify-center gap-3">
@@ -354,7 +354,7 @@
                                     </span>
                                 </div>
                                 <p class="text-blue-600 text-sm mt-2 font-medium">
-                                      Reservá ahora con solo el 10% <span class="font-bold text-blue-700">$9.900</span> y pagá el resto tras recibir el informe. 
+                                     Reservá con <strong> $9.900 (10%) </strong> y pagá el saldo al recibir tu <strong>informe completo</strong>.
                                 </p>
                             </div>
                         </div>
