fix txt paso 01

--- a/index.html
+++ b/index.html
@@ -478,7 +478,7 @@
                                 <span class="text-blue-600 font-bold text-lg">01.</span>
                                 <h4 class="text-2xl font-bold mb-4">Completas el formulario de solicitud</h4>
                                 <p class="text-lg leading-relaxed">
-                                    Nos envias los datos del auto a verificar y el lugar donde se encuentra. Es rápido y sencillo.
+                                    Nos envias los datos del auto a verificar y el lugar donde se encuentra. Rápido y simple.
                                 </p>
                             </div>
                         </div>
