mejoras txt btn CTA y fielder

--- a/index.html
+++ b/index.html
@@ -150,7 +150,7 @@
                         Seguro
                     </h4>
                     <p>
-                        Pagás reserva con el 10% de forma segura y agendas automáticamente.
+                        Pagás reserva de forma segura y agendas automáticamente.
                     </p>
                 </div>
 
@@ -173,7 +173,7 @@
                 </a> -->
                 <a class="btn-primary inline-flex items-center justify-center gap-2 px-8 py-4 text-lg rounded-full shadow-2xl shadow-blue-200 hover:transform hover:-translate-y-1 transition-all font-bold" 
                     href="https://app.automarketpro.com.ar/solicitud/0">
-                        Agendar inspección ahora
+                        Contratar servicio
                 </a>
                 <p class="text-xs mt-3 font-medium flex items-center justify-center gap-2">
                     <i class="fas fa-check-circle text-blue-600"></i>
@@ -354,7 +354,7 @@
                                     </span>
                                 </div>
                                 <p class="text-blue-600 text-sm mt-2 font-medium">
-                                     Reservá con <strong> $9.900 (10%) </strong> y pagá el saldo al recibir tu <strong>informe completo</strong>.
+                                     Reservá con <strong> $9.900 </strong> y pagá el saldo al recibir tu <strong>informe completo</strong>.
                                 </p>
                             </div>
                         </div>
@@ -403,11 +403,11 @@
         <div class="fade-in py-12 text-center">
                  <a class="btn-primary inline-flex items-center justify-center gap-2 px-8 py-4 text-lg rounded-full shadow-2xl shadow-blue-200 hover:transform hover:-translate-y-1 transition-all font-bold" 
                     href="https://app.automarketpro.com.ar/solicitud/0">
-                        Reservar inspección
+                       Agendar verificación
                 </a>
                 <p class="text-xs mt-3 font-medium flex items-center justify-center gap-2">
                     <i class="fas fa-check-circle text-blue-600"></i>
-                    Contratas con el 10% y nos ocupamos del resto.
+                    Reservá tu inspección por solo $9.900.
                 </p>
 
                 <!-- <a href="https://app.automarketpro.com.ar/solicitud/0"
@@ -493,7 +493,7 @@
                                 <span class="text-blue-600 font-bold text-lg">02.</span>
                                 <h4 class="text-2xl font-bold mb-4">Pagás la seña y agendamos</h4>
                                 <p class="text-lg leading-relaxed">
-                                    Reservas con el 10%, coordinamos día y horario para inspeccionar el vehículo en el lugar acordado.
+                                    Reservas el turno y coordinamos día y horario para inspeccionar el vehículo en el lugar acordado.
                                     Podés estar presente junto al verificador.
                                 </p>
                             </div>
@@ -549,7 +549,7 @@
                 Contratá la inspección, elegí día y horario y recibí tu informe. 
             </p>
 
-            <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Señar verificación</a>
+            <a class="btn-primary" href="https://app.automarketpro.com.ar/solicitud/0">Reservar turno</a>
         
             <p class="text-xs mt-10 font-medium gap-2 max-w-sm mx-auto">
                 <span> Podés estar presente y ver el auto con nosotros
