--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@
                         Rápido
                     </h4>
                     <p>
-                        Recibis informe completo en 24hs.
+                        Recibis un informe completo del auto en 24hs.
                     </p>
                 </div>
             </div>
